Update background color

--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,7 @@
 
   color-scheme: dark;
   color: white;
-  background-color: #242424;
+  background-color: #166e07;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
